Added exceptions and errors